# AI_Daily_Assistant

./: .dockerignore  Dockerfile  README.md  ai.py  bot.py  database.py  main.py  pyproject.toml  requirements.txt  send_broadcast.py  task-definition.json
.github/workflows/: daily_disgest.yml
